--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,3 +12,11 @@ input:-webkit-autofill {
   -webkit-text-fill-color: white; 
   transition: background-color 5000s ease-in-out 0s;
 }
+
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: #040721;
+}
