✨ Feat : 404 페이지 구현

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,19 +2,19 @@
 @import "pretendard/dist/web/variable/pretendardvariable.css";
 
 body {
-  font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont,
-    system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo',
-    'Noto Sans KR', 'Malgun Gothic', sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
 }
 
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset;
-  -webkit-text-fill-color: white; 
+  -webkit-text-fill-color: white;
   transition: background-color 5000s ease-in-out 0s;
 }
 
-
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -23,7 +23,7 @@ html, body {
 
 /* 전체 스크롤바 폭 */
 ::-webkit-scrollbar {
-  width: 8px;  /* 세로 스크롤바 */
+  width: 8px; /* 세로 스크롤바 */
   height: 8px; /* 가로 스크롤바 */
 }
 
@@ -41,4 +41,26 @@ html, body {
 /* hover 시 */
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(255, 255, 255, 0.6);
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+.shimmer-text {
+  background: linear-gradient(
+    40deg,
+    rgba(170, 202, 255, 0.4) 25%,
+    rgba(194, 133, 252, 0.8) 50%,
+    rgba(111, 163, 248, 0.4) 75%
+  );
+  background-size: 200% 100%;
+  animation: shimmer 3s infinite ease-in-out;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
