✨ Feat : browse 페이지 구현

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,3 +64,17 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@keyframes gradient-x {
+  0%, 100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
+
+.gradient-animate {
+  background-size: 200% 200%;
+  animation: gradient-x 6s ease infinite;
+}
